# Builder

./: .buildertest.example  .gitignore  ACTION_PLAN.md  BENCHMARK_SUMMARY.md  COMPREHENSIVE_AUDIT_2025.md  CONTRIBUTING.md  DETERMINISM_IMPLEMENTATION.md  FEATURE_PRIORITIES.md  GOD_OBJECTS.md  HERMETIC_TESTS_ADDED.md  HOMEBREW_DISTRIBUTION.md  INTEGRATION_COMPLETE.md  LANGUAGE_REGISTRY_REFACTOR.md  LANGUAGE_VALIDATION_SUMMARY.md  LICENSE  Makefile  PARSE_CACHE_IMPLEMENTATION.md  README.md  RELEASE_SUMMARY.md  REORGANIZATION_SUMMARY.md  SECURITY_FIXES_SUMMARY.md  SERIALIZATION_COMPLETE.md  TECH_DEBT_EVALUATION.md  TEST_SUITE_COMPLETION_REPORT.md  TOOLCHAIN_INTEGRATION.md  WEB_REORGANIZATION.md  WIZARD_COMPLETE.md  benchmark-results-real.md  dub.json  extras.md  run-tests.sh  test-homebrew-install.sh  unwrap-report.md
Formula/: builder.rb
distribution/: README.md  RELEASE_CHECKLIST.md
docs/: ARCHITECTURE.md  BUILDERIGNORE.md  DSL.md  EXAMPLES.md  MEMORY_SAFETY_AUDIT.md  PERFORMANCE.md  README.md  SECURITY.md  TELEMETRY.md  TESTING.md  plan.md
examples/: .builderignore.example  performance_demo.d  run-all-examples.sh
examples/migration-examples/cmake-example/: CMakeLists.txt
examples/plugins/builder-plugin-security/: Cargo.toml  README.md
examples/plugins/builder-plugin-security/src/: main.rs
examples/rust-project/: BUILD  Builderfile  Cargo.toml  WORKSPACE  main.rs
extension-vscode/: README.md  builder-lang-1.0.0.vsix
homebrew-plugins/: README.md
source/: README.md  app.d
tests/: README.md  TEST_IMPROVEMENTS_SUMMARY.md  check-coverage-thresholds.sh  (+9 more)
(+2511 files in other folders)
