[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"
authors = ["Builder Team"]
description = "Rust demonstration project for Builder"
license = "MIT"

[[bin]]
name = "rust-app"
path = "main.rs"

[dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
incremental = true


