[package]
name = "builder-plugin-security"
version = "1.0.0"
edition = "2021"
authors = ["Griffin <griffincancode@gmail.com>"]
license = "MIT"
description = "Dependency vulnerability scanner for Builder"

[[bin]]
name = "builder-plugin-security"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

